--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,10 +16,11 @@ keywords = ["transforms", "robotics", "ROS", "tf"]
 categories = ["science::robotics"]
 
 [workspace.dependencies]
-futures = "0.3"
 nalgebra = "0.30"
-r2r = "0.8"
+ros2-client = "0.6"
 rosrust = "0.9"
+rustdds = "0.9"
+serde = { version = "1", features = ["derive"] }
 thiserror = "1.0"
 tokio = "1"
 
