--- a/tf_r2r/Cargo.toml
+++ b/tf_r2r/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "tf_r2r"
-version.workspace = true
+version = "0.2.0"
 edition.workspace = true
 license.workspace = true
 repository.workspace = true
