--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,10 @@
 [workspace]
 resolver = "2"
-members = ["tf_rosrust", "tf_r2r"]
+members = [
+    "tf_r2r",
+    "tf_roslibrust",
+    "tf_rosrust",
+]
 
 [workspace.package]
 edition = "2021"
