--- a/tf_roslibrust/Cargo.toml
+++ b/tf_roslibrust/Cargo.toml
@@ -23,18 +23,19 @@ thiserror.workspace = true
 tokio = "1.38.0"
 
 [dependencies.roslibrust]
-git = "https://github.com/Carter12s/roslibrust.git"
+git = "https://github.com/lucasw/roslibrust.git"
 # tag v0.10.1 on github is confirmed to work
 # version="0.9.0"
-# rev = "883057f8d159b0298c243744d65971e746ec5dbc"
-branch = "master"
+rev = "a1eb5a875906a26aa172a7465dd018858d191665"
+# branch = "time_ops"
 features = ["ros1"]
 
 [dependencies.roslibrust_codegen]
-git = "https://github.com/Carter12s/roslibrust.git"
-branch = "master"
+git = "https://github.com/lucasw/roslibrust.git"
+rev = "a1eb5a875906a26aa172a7465dd018858d191665"
+# branch = "time_ops"
 
 [dependencies.roslibrust_codegen_macro]
-git = "https://github.com/Carter12s/roslibrust.git"
-branch = "master"
-
+git = "https://github.com/lucasw/roslibrust.git"
+rev = "a1eb5a875906a26aa172a7465dd018858d191665"
+# branch = "time_ops"
