--- a/tf_roslibrust/Cargo.toml
+++ b/tf_roslibrust/Cargo.toml
@@ -15,6 +15,7 @@ This supports ROS1 using the roslibrust crate.
 
 [dependencies]
 anyhow = "1.0.86"
+chrono = "0.4.38"
 nalgebra.workspace = true
 serde = { version = "1.0", features = ["derive"] }
 serde-big-array = "0.5.1"
@@ -24,18 +25,22 @@ tokio = "1.38.0"
 
 [dependencies.roslibrust]
 git = "https://github.com/lucasw/roslibrust.git"
+branch = "master"
 # tag v0.10.1 on github is confirmed to work
 # version="0.9.0"
-rev = "a1eb5a875906a26aa172a7465dd018858d191665"
+# rev = "a1eb5a875906a26aa172a7465dd018858d191665"
 # branch = "time_ops"
 features = ["ros1"]
 
 [dependencies.roslibrust_codegen]
 git = "https://github.com/lucasw/roslibrust.git"
-rev = "a1eb5a875906a26aa172a7465dd018858d191665"
+branch = "master"
+# rev = "a1eb5a875906a26aa172a7465dd018858d191665"
 # branch = "time_ops"
 
 [dependencies.roslibrust_codegen_macro]
 git = "https://github.com/lucasw/roslibrust.git"
-rev = "a1eb5a875906a26aa172a7465dd018858d191665"
+branch = "master"
+# git = "https://github.com/lucasw/roslibrust.git"
+# rev = "a1eb5a875906a26aa172a7465dd018858d191665"
 # branch = "time_ops"
