--- a/tf_roslibrust/Cargo.toml
+++ b/tf_roslibrust/Cargo.toml
@@ -24,23 +24,24 @@ thiserror.workspace = true
 tokio = "1.38.0"
 
 [dependencies.roslibrust]
-git = "https://github.com/lucasw/roslibrust.git"
+git = "https://github.com/Carter12s/roslibrust.git"
 branch = "master"
-# tag v0.10.1 on github is confirmed to work
-# version="0.9.0"
+# version="0.10.1"
 # rev = "a1eb5a875906a26aa172a7465dd018858d191665"
 # branch = "time_ops"
 features = ["ros1"]
 
 [dependencies.roslibrust_codegen]
-git = "https://github.com/lucasw/roslibrust.git"
+git = "https://github.com/Carter12s/roslibrust.git"
 branch = "master"
+# version="0.10.1"
 # rev = "a1eb5a875906a26aa172a7465dd018858d191665"
 # branch = "time_ops"
 
 [dependencies.roslibrust_codegen_macro]
-git = "https://github.com/lucasw/roslibrust.git"
+git = "https://github.com/Carter12s/roslibrust.git"
 branch = "master"
+# version="0.10.1"
 # git = "https://github.com/lucasw/roslibrust.git"
 # rev = "a1eb5a875906a26aa172a7465dd018858d191665"
 # branch = "time_ops"
