--- a/tf_roslibrust/Cargo.toml
+++ b/tf_roslibrust/Cargo.toml
@@ -19,9 +19,11 @@ chrono = "0.4.38"
 nalgebra.workspace = true
 serde = { version = "1.0", features = ["derive"] }
 serde-big-array = "0.5.1"
+serde_derive = "1.0.210"
 smart-default = "0.7.1"
 thiserror.workspace = true
 tokio = "1.38.0"
+toml = "0.8.19"
 
 [dependencies.roslibrust]
 git = "https://github.com/Carter12s/roslibrust.git"
