load a toml of a bunch of lookup-broadcast pairs and then do lookups, modifications, and publish them out

--- a/tf_roslibrust/Cargo.toml
+++ b/tf_roslibrust/Cargo.toml
@@ -59,3 +59,7 @@ path = "src/bin/echo.rs"
 [[bin]]
 name = "tf_publisher"
 path = "src/bin/publisher.rs"
+
+[[bin]]
+name = "tf2tfs"
+path = "src/bin/tf2tfs.rs"
