--- a/roslibrust_util/Cargo.toml
+++ b/roslibrust_util/Cargo.toml
@@ -11,32 +11,21 @@ categories.workspace = true
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-anyhow = "1.0.92"
+anyhow.workspace = true
 camino = "1.1.9"
+log.workspace = true
 memmap = "0.7.0"
 serde = { version = "1.0", features = ["derive"] }
 serde-big-array = "0.5.1"
 serde_derive = "1.0.210"
 thiserror.workspace = true
-tokio = "1.41.0"
-toml = "0.8.19"
+tokio.workspace = true
+toml.workspace = true
 tracing = "0.1.40"
 
-[dependencies.roslibrust]
-git = "https://github.com/lucasw/roslibrust"
-branch = "get_rx_msg_def"
-# path = "../../roslibrust/roslibrust"
-# version="0.10.2"
-features = ["ros1"]
-
-[dependencies.roslibrust_codegen]
-git = "https://github.com/lucasw/roslibrust"
-branch = "get_rx_msg_def"
-# path = "../../roslibrust/roslibrust_codegen"
-# version="0.10"
+roslibrust.workspace = true
+roslibrust_codegen.workspace = true
 
 [dependencies.roslibrust_codegen_macro]
 git = "https://github.com/lucasw/roslibrust"
 branch = "get_rx_msg_def"
-# path = "../../roslibrust/roslibrust_codegen_macro"
-# version="0.10"
