--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -66,8 +66,8 @@ jobs:
 
       - run: cargo build
 
-      - run: cargo test -p tf_roslibrust
+      - run: cargo test
 
-      - run: cargo fmt -p tf_roslibrust --check
+      - run: cargo fmt --check
 
-      - run: cargo clippy -p tf_roslibrust
+      - run: cargo clippy
