--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [workspace]
 resolver = "2"
-members = [ "roslibrust_util", "tf_mcap",
+members = [ "launcher", "roslibrust_util", "tf_mcap",
     "tf_roslibrust",
 ]
 
@@ -23,7 +23,7 @@ clap = { version = "4.5.16", features = ["cargo"] }
 log = "0.4.22"
 nalgebra = "0.30"
 thiserror = "1.0.65"
-tokio = "1.40.0"
+tokio = { version = "1.40.0", features = ["io-util", "macros", "process", "rt", "rt-multi-thread"] }
 toml = "0.8.19"
 
 [workspace.dependencies.roslibrust]
