use a toml file to specify commands and args, looks to be working ok but need to try more intensive processes

--- a/launcher/Cargo.toml
+++ b/launcher/Cargo.toml
@@ -9,4 +9,12 @@ keywords.workspace = true
 categories.workspace = true
 
 [dependencies]
+futures = "0.3.31"
+serde.workspace = true
+serde-big-array.workspace = true
+serde_derive.workspace = true
 tokio.workspace = true
+toml.workspace = true
+
+[dependencies.roslibrust_util]
+path = "../roslibrust_util"
