--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,9 @@ anyhow = "1.0.92"
 clap = { version = "4.5.16", features = ["cargo"] }
 log = "0.4.22"
 nalgebra = "0.30"
+serde = { version = "1.0", features = ["derive"] }
+serde-big-array = "0.5.1"
+serde_derive = "1.0.210"
 thiserror = "1.0.65"
 tokio = { version = "1.40.0", features = ["io-util", "macros", "process", "rt", "rt-multi-thread", "signal"] }
 toml = "0.8.19"
