can now replace toml defined args through the command line

--- a/launcher/Cargo.toml
+++ b/launcher/Cargo.toml
@@ -9,6 +9,7 @@ keywords.workspace = true
 categories.workspace = true
 
 [dependencies]
+clap.workspace = true
 futures = "0.3.31"
 serde.workspace = true
 serde-big-array.workspace = true
