--- a/roslibrust_util/Cargo.toml
+++ b/roslibrust_util/Cargo.toml
@@ -18,6 +18,7 @@ memmap = "0.7.0"
 serde.workspace = true
 serde-big-array.workspace = true
 serde_derive.workspace = true
+simple_logger = "5.0.0"
 thiserror.workspace = true
 tokio.workspace = true
 toml.workspace = true
