--- a/tf_rosrust/Cargo.toml
+++ b/tf_rosrust/Cargo.toml
@@ -1,5 +1,9 @@
 [package]
 name = "tf_rosrust"
+# When publishing a new version:
+# - Create "v0.x.y" git tag
+# - Run `cargo publish`
+# - Push the above tag (run `git push origin --tags`)
 version = "0.1.0"
 edition.workspace = true
 license.workspace = true
