--- a/roslibrust_util/Cargo.toml
+++ b/roslibrust_util/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "roslibrust_util"
-version = "0.1.0"
+version = "0.2.0"
 edition.workspace = true
 license.workspace = true
 repository.workspace = true
@@ -25,8 +25,8 @@ toml.workspace = true
 tracing = "0.1.40"
 
 roslibrust.workspace = true
-roslibrust_codegen.workspace = true
+# roslibrust_codegen.workspace = true
 
-[dependencies.roslibrust_codegen_macro]
-git = "https://github.com/lucasw/roslibrust"
-branch = "get_rx_msg_def"
+# [dependencies.roslibrust_codegen_macro]
+# git = "https://github.com/lucasw/roslibrust"
+# branch = "get_rx_msg_def"
