--- a/tf_roslibrust/Cargo.toml
+++ b/tf_roslibrust/Cargo.toml
@@ -29,7 +29,7 @@ tokio.workspace = true
 toml.workspace = true
 
 roslibrust.workspace = true
-roslibrust_codegen.workspace = true
+# roslibrust_codegen.workspace = true
 
 [dependencies.roslibrust_util]
 path = "../roslibrust_util"
